Card almost done

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,3 +50,22 @@
  
 
 }
+
+.orators-1{
+    font-size: 14px;
+    padding-top: 15px;
+}
+
+.card-1{
+margin-left: 240px;
+
+}
+
+.card-3{
+    margin-right: 240px;
+}
+
+
+
+
+
